# 2025-bioinformatics-term-project

./: .gitignore  .sops.yaml  README.md  flake.nix  pyproject.toml
nix/: packages.nix  shell.nix
results/: comparison_table.csv  ranking_BPPM-GAT.parquet  ranking_CountFoldChange.parquet  ranking_OneHot_L=100___3-mer_Counts___Thermodynamic_ViennaRNA.parquet  ranking_RNA-FM_mean_pooling.parquet  umap_BPPM-GAT.parquet  umap_OneHot_L=100___3-mer_Counts___Thermodynamic_ViennaRNA.parquet  umap_RNA-FM_mean_pooling.parquet
src/selex_analyze_poc/: __init__.py  base.py  compare_embeddings.py  evaluation.py  extractors.py  ranker.py
terraform/: .envrc  flake-module.nix  secrets.yaml
terraform/runpod/: main.tf
test/data/: seeds.txt
